# pgpolicy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  index.yaml
.github/workflows/: ci.yml  helm-chart-release.yml  release.yml
charts/pgroles-operator/: Chart.yaml  artifacthub-repo.yml  values.yaml
charts/pgroles-operator/crds/: postgrespolicies.pgroles.io.yaml
charts/pgroles-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
crates/pgpolicy-cli/: Cargo.toml
crates/pgpolicy-cli/src/: lib.rs  main.rs
crates/pgpolicy-cli/tests/: cli.rs
crates/pgpolicy-core/: Cargo.toml
crates/pgpolicy-core/src/: diff.rs  lib.rs  manifest.rs  model.rs  sql.rs
crates/pgpolicy-inspect/: Cargo.toml
crates/pgpolicy-inspect/src/: defaults.rs  lib.rs  memberships.rs  privileges.rs  roles.rs
crates/pgpolicy-operator/: Cargo.toml
crates/pgpolicy-operator/src/: context.rs  crd.rs  main.rs  reconciler.rs
crates/pgroles-cli/: Cargo.toml  README.md
crates/pgroles-cli/src/: lib.rs  main.rs
crates/pgroles-cli/tests/: cli.rs
crates/pgroles-core/: Cargo.toml  README.md
crates/pgroles-core/src/: diff.rs  export.rs  manifest.rs  model.rs  sql.rs
crates/pgroles-inspect/: Cargo.toml  README.md
crates/pgroles-inspect/src/: defaults.rs  lib.rs  memberships.rs  privileges.rs  roles.rs  safety.rs
crates/pgroles-operator/: Cargo.toml  README.md
crates/pgroles-operator/src/: advisory.rs  context.rs  crd.rs  lib.rs  main.rs  observability.rs  reconciler.rs
docker/: Dockerfile  Dockerfile.runtime  compose.yaml
docs/: package-lock.json  package.json
docs/markdoc/: tags.js
docs/src/components/: Callout.jsx  Fence.jsx  Hero.jsx  Layout.jsx  Logo.jsx  OperatorReconciliationDiagram.jsx  Search.jsx
docs/src/pages/: _app.jsx  index.md
docs/src/pages/docs/: architecture.md  ci-cd.md  cli.md  default-privileges.md  google-cloud-sql.md  grants.md  installation.md  manifest-format.md  memberships.md  operator-architecture.md  operator.md  profiles.md  quick-start.md
examples/: minimal.yaml  multi-schema.yaml
k8s/: crd.yaml
k8s/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
k8s/samples/: basic-policy.yaml  rotated-secret-policy.yaml
scripts/: generate-load-policy.sh
tests/fixtures/: smoke-test.yaml
