[package]
name = "pgpolicy-cli"
description = "CLI tool for pgpolicy — validate, diff, plan, and apply PostgreSQL role policies"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pgpolicy"
path = "src/main.rs"

[dependencies]
pgpolicy-core = { workspace = true }
pgpolicy-inspect = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
