[package]
name = "pgpolicy-inspect"
description = "Database introspection for pgpolicy — queries pg_catalog to build the current RoleGraph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pgpolicy-core = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
